# pybind11-example

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  bindings.py
docker/: Dockerfile  setup.sh
